# Matepp

./: .gitignore  CMakeLists.txt  README.md
include/: board.hpp  utility.hpp
src/: board.cpp  main.cpp  utility.cpp
